code clean up on first day

--- a/public/board.html
+++ b/public/board.html
@@ -4,15 +4,19 @@
 <head>
   <title>PatBoard.js</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/board.css" />
   <link href="ico/favicon.ico" rel="icon" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="css/board.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
 </head>
 
 <body>
+  <!-- main entry point -->
   <script src="src/board/sketch.js"></script>
+  <!-- holds "global" functions -->
   <script src="src/board/misc.js"></script>
+  <!-- class description for the counters -->
   <script src="src/board/counter.js"></script>
+  <!-- class description for the players -->
   <script src="src/board/player.js"></script>
 </body>
 
