--- a/public/client.html
+++ b/public/client.html
@@ -4,14 +4,16 @@
 <head>
   <title>PatBoard.js</title>
   <meta charset="utf-8" />
-  <link href="css/board.css" rel="stylesheet" type="text/css" />
   <link href="ico/favicon.ico" rel="icon" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="css/client.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
 </head>
 
 <body>
+  <!-- main entry point -->
   <script src="src/client/sketch.js"></script>
+  <!-- holds "global" functions -->
   <script src="src/client/misc.js"></script>
 </body>
 
