--- a/public/board.html
+++ b/public/board.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <link href="ico/favicon.ico" rel="icon" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="css/board.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
 </head>
 
