--- a/public/client.html
+++ b/public/client.html
@@ -15,6 +15,8 @@
   <script src="src/client/sketch.js"></script>
   <!-- holds "global" functions -->
   <script src="src/client/misc.js"></script>
+  <!-- counter class -->
+  <script src="src/client/counter.js"></script>
 </body>
 
 </html>
