big moves happening

--- a/public/board.html
+++ b/public/board.html
@@ -16,9 +16,9 @@
   <!-- holds "global" functions -->
   <script src="src/board/misc.js"></script>
   <!-- class description for the counters -->
-  <script src="src/board/counter.js"></script>
+  <script src="src/general/counter.js"></script>
   <!-- class description for the players -->
-  <script src="src/board/player.js"></script>
+  <script src="src/general/player.js"></script>
 </body>
 
 </html>
