--- a/public/client.html
+++ b/public/client.html
@@ -15,8 +15,10 @@
   <script src="src/client/sketch.js"></script>
   <!-- holds "global" functions -->
   <script src="src/client/misc.js"></script>
-  <!-- counter class -->
-  <script src="src/client/counter.js"></script>
+  <!-- class description for the counters -->
+  <script src="src/general/counter.js"></script>
+  <!-- class description for the players -->
+  <script src="src/general/player.js"></script>
 </body>
 
 </html>
