more big changes to merge player board over

--- a/public/board.html
+++ b/public/board.html
@@ -13,6 +13,10 @@
 <body>
   <!-- main entry point -->
   <script src="src/board/sketch.js"></script>
+
+  <!-- misc -->
+  <script src="src/general/etc.js"></script>
+
   <!-- class description for the counters -->
   <script src="src/general/counter.js"></script>
   <!-- class description for the players -->
