buttons added and wired up

--- a/public/client.html
+++ b/public/client.html
@@ -17,6 +17,8 @@
   <!-- misc -->
   <script src="src/general/etc.js"></script>
 
+  <!-- class description for status -->
+  <script src="src/general/status.js"></script>
   <!-- class description for the counters -->
   <script src="src/general/counter.js"></script>
   <!-- class description for the players -->
